--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
+    <script src="../src/pages/ChatPage.js"></script>
     <script
       src="https://kit.fontawesome.com/949e0621ff.js"
       crossorigin="anonymous"
